--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
                 </div>
 
                 <div class="col-12  text-center">
-                    <div id="name" class="area">Huyền Trang</div>
+                    <div id="name" class="area">Huyền Trang </div>
                 </div>
 
-                <div class="col-12 text-center">
+                <div class="col-12 text-center" style="z-index: 9999;">
                     <div class="type-wrap">
                         <div id="typed-strings" class="typing">
-                            <h2>Sinh nhật vui vẻ <i id="nae">Trang thúi</i></h2>
-                            <h2></h2>
-                            <h2>Filled with joy and happiness.</h2>
+                            <h2>Hép bi bớt đây cô gái.</h2>
+                            <h2>Chúc em một ngày</h2>
+                            <h2>tràn ngập những</h2>
+                            <h2>lời chúc, quà tặng, tình yêu… </h2>
+                            <h2>Hãy luôn vui vẻ em nhé!</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
